# taskqueue-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  streak.yml
requirements/: base.txt  dev.txt  prod.txt
src/: manage.py
src/taskqueue/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/taskqueue/apps/core/: __init__.py  middleware.py  serializers.py  urls.py  views.py
src/taskqueue/apps/tasks/: __init__.py  admin.py  consumers.py  models.py  queue_routing.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py  webhook_tasks.py  webhooks.py
src/taskqueue/apps/tasks/migrations/: 0001_initial.py  0002_add_owner_fields.py
src/taskqueue/settings/: __init__.py  base.py  development.py  production.py
tests/: conftest.py  test_auth.py  test_queue_routing.py  test_tasks.py  test_webhooks.py
